Cambiando ubicación de iconos isotipo. Cambiando tamaño de isotipo.ico

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="assets/isotipo.ico" />
+    <link rel="icon" type="image/svg+xml" href="assets/isotipo/isotipo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords"
     content="Box Collider, box collider, boxcollider,creamos lo imposible,empresa de tecnologías, desarrollo de software,desarrollo web, aplicaciones, readidad aumentada, realidad virtual, desarrollo de videojuegos, elementos virtuales, software development, web development, applications, augmented reality, virtual reality, video game development, virtual elements,technology company, we create the impossible">
