Agregando Content-Security-Policy al html.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     content="Box Collider, box collider, boxcollider,creamos lo imposible,empresa de tecnologías, desarrollo de software,desarrollo web, aplicaciones, readidad aumentada, realidad virtual, desarrollo de videojuegos, elementos virtuales, software development, web development, applications, augmented reality, virtual reality, video game development, virtual elements,technology company, we create the impossible">
     <meta name="description" content="From Index" data-rh="true" />
     <title>Box Collider</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; worker-src 'self' blob:; object-src 'none';">
   </head>
   <body>
     <div id="root"></div>
